--- a/client/src/index.css
+++ b/client/src/index.css
@@ -73,3 +73,12 @@ button:focus-visible {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.RiveContainer {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  /* background-color: black; */
+  margin: 0;
+  padding: 0;
+}
